--- a/SematicKernelWpf/MainWindow.xaml
+++ b/SematicKernelWpf/MainWindow.xaml
@@ -5,8 +5,65 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SematicKernelWpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="SemanticKernelWPF"
+        Width="425"
+        Height="640"
+        ResizeMode="CanResize"
+        Topmost="True">
 
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        
+        <RichTextBox Grid.Row="0"
+                     Margin="0,0,0,10"
+                     BorderBrush="Black"
+                     BorderThickness="1.5"
+                     IsReadOnly="True"
+                     VerticalScrollBarVisibility="Auto">
+            <FlowDocument>
+                <Paragraph>
+                    <Run Text="{Binding WholeChat}"/>
+                </Paragraph>
+            </FlowDocument>
+        </RichTextBox>
+
+        <TextBox Grid.Row="1"
+                 Height="35"
+                 Margin="0,0,0,10"
+                 TextWrapping="Wrap"
+                 BorderBrush="Black"
+                 BorderThickness="1.5"
+                 Text="{Binding UserMessage, UpdateSourceTrigger=PropertyChanged}" />
+
+        <StackPanel Grid.Row="2"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Center">
+            <Button Content="Send"
+                    Width="80"
+                    Height="30"
+                    Margin="0,0,10,0"
+                    Command="{Binding SubmitCommand}" />
+
+            <Button Content="Clear Chat"
+                    Width="80"
+                    Height="30"
+                    Command="{Binding ClearCommand}" />
+
+            <Button Content="Reset Connection"
+                    Width="110"
+                    Height="30"
+                    Margin="10,0,0,0"
+                    Command="{Binding ReconnectCommand}" />
+
+            <Button Content="Exit"
+                    Width="80"
+                    Height="30"
+                    Margin="10,0,0,0"
+                    Command="{Binding ExitCommand}" />
+        </StackPanel>
     </Grid>
 </Window>
